<resources>
    <string name="app_name">My Application</string>
    <string name="action_done">Done</string>
    <string name="toolbar_register">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_update_profile">UpdateProfile</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="avatar_text">Avatar</string>
</resources>
